...
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
      android:id="@+id/cpi_button"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/cpi_12_month_percentages"
      app:cornerRadius="0dp"
...
