...
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/pcls_residual"
      app:backgroundTint="?colorPrimary"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/date_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

...
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/revaluation_calculator"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/inflation_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date_button" />

    <Button
...
