<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <import type="androidx.core.content.ContextCompat" />

    <variable
      name="dateCalcViewModel"
      type="com.carkzis.android.plutus.dates.DateCalcViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dates.DateCalcFragment">

    <LinearLayout
      android:id="@+id/date_title_linear_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      tools:ignore="UseCompoundDrawables">

      <ImageView
        android:id="@+id/icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/plutus_icon"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="152dp" />

      <TextView
        android:id="@+id/date_calc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/date_calculator_text"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="147dp" />

    </LinearLayout>


    <LinearLayout
      android:id="@+id/date_input_linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@+id/date_title_linear_layout"
      tools:layout_editor_absoluteX="70dp">

      <LinearLayout
        android:id="@+id/date_input_ll_column_1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="219dp">

        <TextView
          android:id="@+id/start_date_label"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/start_date_label"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="33dp"
          tools:layout_editor_absoluteY="183dp" />

        <TextView
          android:id="@+id/end_date_label"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/end_date"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="48dp"
          tools:layout_editor_absoluteY="424dp" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/date_input_ll_column_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="219dp">

        <EditText
          android:id="@+id/start_date_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:cursorVisible="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:hint="@string/start_date_hint"
          android:importantForAutofill="no"
          android:inputType="date"
          android:minHeight="48dp"
          android:text="@{String.valueOf(dateCalcViewModel.startDateInfo)}"
          android:textSize="@dimen/normal_text_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          tools:layout_editor_absoluteY="214dp" />


        <EditText
          android:id="@+id/end_date_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:cursorVisible="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:hint="@string/end_date_hint"
          android:importantForAutofill="no"
          android:inputType="date"
          android:minHeight="48dp"
          android:text="@{String.valueOf(dateCalcViewModel.endDateInfo)}"
          android:textSize="@dimen/normal_text_size"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.7"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      </LinearLayout>

    </LinearLayout>

    <TableLayout
      android:id="@+id/date_results_table_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:stretchColumns="*"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date_calc_button"
      app:layout_constraintVertical_bias="0.25">

      <TableRow
        android:id="@+id/years_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/years_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/complete_years"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="60dp"
          tools:layout_editor_absoluteY="278dp" />

        <TextView
          android:id="@+id/years_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/years_results(dateCalcViewModel.dateCalcResults.years)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="60dp"
          tools:layout_editor_absoluteY="278dp"
          tools:text="10 years" />

      </TableRow>

      <TableRow
        android:id="@+id/months_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/months_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/complete_months"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="51dp"
          tools:layout_editor_absoluteY="329dp" />

        <TextView
          android:id="@+id/months_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/months_results(dateCalcViewModel.dateCalcResults.months)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="51dp"
          tools:layout_editor_absoluteY="329dp"
          tools:text="120 months" />

      </TableRow>

      <TableRow
        android:id="@+id/weeks_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/weeks_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/complete_weeks"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/weeks_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/weeks_results(dateCalcViewModel.dateCalcResults.weeks)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="521 weeks" />

      </TableRow>

      <TableRow
        android:id="@+id/days_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
          android:id="@+id/days_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/complete_days"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="434dp" />

        <TextView
          android:id="@+id/days_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/days_results(dateCalcViewModel.dateCalcResults.days)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="434dp"
          tools:text="3650 days" />

      </TableRow>

      <TableRow
        android:id="@+id/years_months_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/years_months_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/years_and_months"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="67dp"
          tools:layout_editor_absoluteY="484dp" />

        <TextView
          android:id="@+id/years_months_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/years_months_results(dateCalcViewModel.dateCalcResults.yearsMonths.first, dateCalcViewModel.dateCalcResults.yearsMonths.second)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="67dp"
          tools:layout_editor_absoluteY="484dp"
          tools:text="10 years and 0 months" />

      </TableRow>

      <TableRow
        android:id="@+id/years_days_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
          android:id="@+id/years_days_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/years_and_days"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="69dp"
          tools:layout_editor_absoluteY="539dp" />

        <TextView
          android:id="@+id/years_days_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/years_days_results(dateCalcViewModel.dateCalcResults.yearsDays.first, dateCalcViewModel.dateCalcResults.yearsDays.second)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="69dp"
          tools:layout_editor_absoluteY="539dp"
          tools:text="10 years and 0 days" />

      </TableRow>

      <TableRow
        android:id="@+id/tax_years_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/tax_years_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/complete_tax_years"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="69dp"
          tools:layout_editor_absoluteY="590dp" />

        <TextView
          android:id="@+id/tax_years_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/tax_years_results(dateCalcViewModel.dateCalcResults.taxYears)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="69dp"
          tools:layout_editor_absoluteY="590dp"
          tools:text="10 tax years" />


      </TableRow>

      <TableRow
        android:id="@+id/sixth_aprils_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/sixth_aprils_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_6th_aprils_passed"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="75dp"
          tools:layout_editor_absoluteY="645dp" />

        <TextView
          android:id="@+id/sixth_aprils_result_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/sixth_aprils_results(dateCalcViewModel.dateCalcResults.sixthAprils)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="75dp"
          tools:layout_editor_absoluteY="645dp"
          tools:text="10 6th Aprils passed" />

      </TableRow>

    </TableLayout>

    <Button
      android:id="@+id/date_calc_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/calculate_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date_input_linear_layout" />


  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>