...
  <string name="sixth_aprils_results">%1$d 6th Aprils passed</string>
  <string name="no_start_date_entered">You need to enter a start date!</string>
  <string name="no_end_date_entered">You need to enter an end date!</string>
  <string name="end_date_after_start_date">The end date cannot be before the start date!</string>
  <string name="revaluation_calculator">Revaluation Calculator</string>
  <string name="inflation_information">Inflation Information</string>
  <string name="ok">OK</string>
  <string name="full_pension">Full Pension:</string>
  <string name="rpi_contents_text">Retail Price Index (RPI)</string>
  <string name="cpi_contents_text">Consumer Price Index (CPI)</string>
  <string name="gmp_contents_text">GMP Fixed Revaluation Rates</string>
  <string name="cpi_error">There was an error retrieving CPI data…</string>
  <string name="rpi_error">There was an error retrieving RPI data…</string>
...
